--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -20,9 +20,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -303,18 +303,17 @@
                 android:id="@+id/rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="true"
                 android:numStars="5"
                 android:stepSize=".1"
-                android:clickable="true"
 
                 />
 
-            <ListView
-                android:layout_gravity="center"
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/list_reviews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="true" />
+                android:scrollbars="vertical" />
 
             <EditText
                 android:id="@+id/review"
