--- a/app/src/main/res/layout/list_review_item.xml
+++ b/app/src/main/res/layout/list_review_item.xml
@@ -1,34 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardReview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:background="@color/white"
-    card_view:cardCornerRadius="4dp">
-
-
-    <LinearLayout
+    >
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/reviewer"
+        android:background="@color/white"
+        android:layout_margin="8dp"
+        card_view:cardCornerRadius="4dp">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:textColor="@color/dark_blue"
-            android:textSize="24sp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/reviewer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:textColor="@color/dark_blue"
+                android:textSize="24sp"
+                android:text="samuel "
+                android:paddingTop="8dp"
+                android:paddingStart="8dp"
 
-        <TextView
-            android:id="@+id/review_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:textColor="@color/dark_blue"
-            android:textSize="24sp" />
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+                />
 
+            <TextView
+                android:id="@+id/review_desc"
+                android:text="goood goood "
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:textSize="24sp"
+                android:layout_marginStart="32dp"
+                android:paddingBottom="8dp"
+                />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
