--- a/app/src/main/res/layout/fragment_advanced_search.xml
+++ b/app/src/main/res/layout/fragment_advanced_search.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_advanced_search"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/blue"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/blue"
     tools:context="com.example.ecss.medicalmapper.userInterface.fragments.AdvancedSearchFragment"
     tools:showIn="@layout/activity_advanced_search">
 
@@ -18,52 +18,49 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/fab_margin"
         android:orientation="horizontal"
         android:weightSum="2"
-        android:layout_marginBottom="@dimen/fab_margin"
 
         >
+
         <LinearLayout
-            android:layout_weight="1.25"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_weight="1.25"
+            android:orientation="vertical">
 
             <TextView
+                android:id="@+id/placeOrder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/placeOrder"
                 android:text="Places"
-                android:textSize="@dimen/form_element_text_size"
                 android:textColor="@color/white"
-                android:textStyle="bold"
-                />
+                android:textSize="@dimen/form_element_text_size"
+                android:textStyle="bold" />
 
             <ExpandableListView
                 android:id="@+id/medicalPlaces_expandedList"
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+                android:layout_height="wrap_content"
                 android:divider="#A4C739"
                 android:dividerHeight="0.5dp"
-                ></ExpandableListView>
+                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"></ExpandableListView>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_weight=".75"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_weight=".75"
+            android:orientation="vertical">
 
             <TextView
+                android:id="@+id/searchOrder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/searchOrder"
                 android:text="Search order"
-                android:textSize="@dimen/form_element_text_size"
                 android:textColor="@color/white"
+                android:textSize="@dimen/form_element_text_size"
                 android:textStyle="bold"
 
                 />
@@ -72,25 +69,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="@dimen/fab_margin"
-                >
+                android:paddingLeft="@dimen/fab_margin">
+
                 <CheckBox
+                    android:id="@+id/nearestCheckBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nearest"
-                    android:textSize="@dimen/form_element_text_size"
                     android:textColor="@color/white"
-                    android:id="@+id/nearestCheckBox"
-                    />
+                    android:textSize="@dimen/form_element_text_size" />
 
                 <CheckBox
+                    android:id="@+id/topRatedtCheckBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Top rated"
-                    android:textSize="@dimen/form_element_text_size"
                     android:textColor="@color/white"
-                    android:id="@+id/topRatedtCheckBox"
-                    />
+                    android:textSize="@dimen/form_element_text_size" />
             </LinearLayout>
 
         </LinearLayout>
@@ -104,6 +99,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="24dp"
         android:background="@color/white">
+
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/start_search"
             android:layout_width="match_parent"
@@ -115,53 +111,20 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/search_reasult_Layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/search_reasult_Layout"
         android:orientation="vertical"
-        android:visibility="invisible"
-        >
+        android:visibility="invisible">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card_view:cardCornerRadius="4dp"
             android:layout_margin="8dp"
-
-            >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp"
-
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="DR : Tarek Nabil El Sadfy  "
-                android:textColor="@color/blue"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Address : 12 El Tahrir street"
-                android:textColor="@color/blue"
-                android:paddingTop="16dp"
-
-                />
-
-        </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             card_view:cardCornerRadius="4dp"
-            android:layout_margin="8dp"
 
             >
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -169,18 +132,19 @@
                 android:padding="16dp"
 
                 >
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="DR : Sayed El Akhras"
-                    android:textColor="@color/blue"
-                    />
+                    android:text="DR : Tarek Nabil El Sadfy  "
+                    android:textColor="@color/blue" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Address : 9 El Batal Ahmad Abdel Aziz Street"
-                    android:textColor="@color/blue"
                     android:paddingTop="16dp"
+                    android:text="Address : 12 El Tahrir street"
+                    android:textColor="@color/blue"
 
                     />
 
@@ -188,14 +152,42 @@
         </android.support.v7.widget.CardView>
 
 
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            card_view:cardCornerRadius="4dp"
 
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+
+                >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="DR : Sayed El Akhras"
+                    android:textColor="@color/blue" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="16dp"
+                    android:text="Address : 9 El Batal Ahmad Abdel Aziz Street"
+                    android:textColor="@color/blue"
+
+                    />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
 
     </LinearLayout>
-
-
-
-
 
 
 </LinearLayout>
