--- a/app/src/main/res/layout/list_review_item.xml
+++ b/app/src/main/res/layout/list_review_item.xml
@@ -4,42 +4,42 @@
     android:id="@+id/cardReview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    >
+    android:layout_margin="8dp">
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_margin="8dp"
+        android:background="@color/white"
         card_view:cardCornerRadius="4dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/reviewer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:paddingStart="8dp"
+                android:paddingTop="8dp"
+                android:text="samuel "
                 android:textColor="@color/dark_blue"
                 android:textSize="24sp"
-                android:text="samuel "
-                android:paddingTop="8dp"
-                android:paddingStart="8dp"
 
                 />
 
             <TextView
                 android:id="@+id/review_desc"
-                android:text="goood goood "
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:textSize="24sp"
                 android:layout_marginStart="32dp"
                 android:paddingBottom="8dp"
-                />
+                android:text="goood goood "
+                android:textColor="#000"
+                android:textSize="24sp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
