ButterKnife added Builder Pattern Applied for Class Branch

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,7 @@
     android:background="@color/blue"
     android:orientation="vertical"
     android:weightSum="100"
-    tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.SplashScreen">
+    tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.SplashScreenActivity">
 
 
     <LinearLayout
