--- a/app/src/main/res/layout/activity_saved_places.xml
+++ b/app/src/main/res/layout/activity_saved_places.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.SavedPlaces">
+    tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.SavedPlacesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
