--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -1,7 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
+    android:id="@+id/DetailsFragment"
     android:name="com.example.ecss.medicalmapper.userInterface.fragments.DetailsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
