--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.HomeScreen"
+    tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.HomeScreenActivity"
     tools:showIn="@layout/app_bar_home_screen">
 
     <fragment
@@ -14,5 +14,5 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.HomeScreen" />
+        tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.HomeScreenActivity" />
 </RelativeLayout>
