--- a/app/src/main/res/layout/fragment_saved_clinics.xml
+++ b/app/src/main/res/layout/fragment_saved_clinics.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ecss.medicalmapper.userInterface.fragments.SavedClinics">
+    tools:context="com.example.ecss.medicalmapper.userInterface.fragments.SavedClinicsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
