--- a/app/src/main/res/menu/menu_details.xml
+++ b/app/src/main/res/menu/menu_details.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.Details">
+    tools:context="com.example.ecss.medicalmapper.userInterface.activities.general.DetailsActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
