--- a/app/src/main/res/layout/activity_chatbot.xml
+++ b/app/src/main/res/layout/activity_chatbot.xml
@@ -1,66 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/blue"
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@color/blue"
+
     tools:context="com.example.ecss.medicalmapper.chatbot.ChatBotActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textview"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:textSize="18sp"
-            android:textColor="@color/bg_user_message"
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/recycler_view_chatbot"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_above="@+id/divider"
+    />
 
-            />
+<View
+    android:id="@+id/divider"
+    android:layout_width="match_parent"
+    android:layout_height="2dp"
+    android:layout_gravity="bottom"
+    android:background="@color/divider"
+    android:layout_above="@+id/senderContainer"/>
+<RelativeLayout
+    android:id="@+id/senderContainer"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/bg_user_message"
+    android:layout_alignParentBottom="true"
+    android:paddingBottom="4dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:paddingTop="8dp">
 
-    </LinearLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/senderContainer"
+    <EditText
+        android:id="@+id/textSend"
+        android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bg_user_message"
-        android:layout_alignParentBottom="true"
-        android:paddingBottom="4dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="8dp">
+        android:textColor="#555555"
+        android:textSize="14sp"
+        android:hint="Type your message"
+        android:gravity="top"
+        android:layout_toStartOf="@+id/btn_send_message"
+        android:layout_toLeftOf="@+id/btn_send_message" />
+    <Button
+        android:id="@+id/button"
+        android:layout_marginRight="10dp"
+        android:textColor="#FFFFFF"
+        android:layout_width="72dp"
+        android:layout_height="40dp"
+        android:text="Send"
+        android:background="@color/accent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true" />
+</RelativeLayout>
 
-        <EditText
-            android:id="@+id/textSend"
-            android:layout_marginLeft="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#555555"
-            android:textSize="14sp"
-            android:hint="Type your message"
-            android:gravity="top"
-            android:layout_toStartOf="@+id/btn_send_message"
-            android:layout_toLeftOf="@+id/btn_send_message" />
-        <Button
-            android:id="@+id/button"
-            android:layout_marginRight="10dp"
-            android:textColor="#FFFFFF"
-            android:layout_width="72dp"
-            android:layout_height="40dp"
-            android:text="Send"
-            android:background="@color/accent"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true" />
-    </RelativeLayout>
+<ProgressBar
+    android:id="@+id/progress_for_chat"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true"
+    android:visibility="gone"/>
 
 </RelativeLayout>
